--- a/app/views/housing/start/harm/previous.html
+++ b/app/views/housing/start/harm/previous.html
@@ -40,7 +40,7 @@ Submit intelligence about immigration or borders – Have you already reported t
       value: data ["harm-previous"],
       fieldset: {
         legend: {
-          text: "Has this this danger or risk already been reported to the relevant organisation?",
+          text: "Has this danger or risk already been reported to the relevant organisation?",
           isPageHeading: true,
           classes: "govuk-fieldset__legend--l"
         }
