updated buttons and fixed the housing link

--- a/app/views/housing/complete/declaration.html
+++ b/app/views/housing/complete/declaration.html
@@ -30,7 +30,8 @@ Submit intelligence about immigration or borders – Declaration
 </ul>
 
     {{ govukButton({
-      text: "Confirm and submit"
+      text: "Confirm and submit",
+      classes: "hods-button"
     }) }}
 
 
