--- a/app/views/housing/start/crime.html
+++ b/app/views/housing/start/crime.html
@@ -24,7 +24,7 @@ Submit intelligence about immigration or borders – What is the immigration off
 </p>
     <form class="form" action="sub-crime" method="post">
 
-      {% include "/current/templates/crime-list.html" %}
+      {% include "/housing/templates/crime-list.html" %}
 
       <div class="govuk-radios__divider">or</div>
       <div class="govuk-radios__item">
@@ -49,7 +49,8 @@ Submit intelligence about immigration or borders – What is the immigration off
 <!-- End of extension -->
 
     {{ govukButton({
-      text: "Continue"
+      text: "Continue",
+      classes: "hods-button"
     }) }}
 
     <!--<input type="hidden" id="sis-main-offence-done" name="sis-main-offence-done" value="Yes">-->
