--- a/app/views/housing/start/details-confirm.html
+++ b/app/views/housing/start/details-confirm.html
@@ -75,6 +75,7 @@ Submit intelligence about immigration or borders – These are the details we ha
 
         {{ govukButton({
           text: "Continue",
+          classes: "hods-button",
           href:"ho-team"
         }) }}
 
