--- a/app/views/housing/start/employee-details.html
+++ b/app/views/housing/start/employee-details.html
@@ -83,7 +83,8 @@ Submit intelligence about immigration or borders – What are the details of the
 {% from "govuk/components/button/macro.njk" import govukButton %}
 
 {{ govukButton({
-  text: "Continue"
+  text: "Continue",
+  classes: "hods-button"
 }) }}
 
       </form>
