--- a/app/views/housing/start/harm/previous.html
+++ b/app/views/housing/start/harm/previous.html
@@ -61,7 +61,8 @@ Submit intelligence about immigration or borders – Have you already reported t
     }) }}
 
     {{ govukButton({
-      text: "Continue"
+      text: "Continue",
+      classes: "hods-button"
     }) }}
 
 
