--- a/app/views/housing/start/ho-team.html
+++ b/app/views/housing/start/ho-team.html
@@ -236,6 +236,7 @@ Start typing to find teams
 
         {{ govukButton({
           text: "Continue",
+          classes: "hods-button",
           href:"harm/details"
         }) }}
 
