--- a/app/views/housing/start/sub-crime.html
+++ b/app/views/housing/start/sub-crime.html
@@ -45,7 +45,8 @@ Submit intelligence about immigration or borders – Is there danger to life, or
     }) }}
 
     {{ govukButton({
-      text: "Continue"
+      text: "Continue",
+      classes: "hods-button"
     }) }}
 
 
