--- a/app/views/housing/start/team.html
+++ b/app/views/housing/start/team.html
@@ -142,7 +142,8 @@ Submit intelligence about immigration or borders – Who did you receive this in
 
 
 {{ govukButton({
-  text: "Continue"
+  text: "Continue",
+  classes: "hods-button"
 }) }}
 </form>
 
