--- a/app/views/housing/task/actions/details.html
+++ b/app/views/housing/task/actions/details.html
@@ -131,7 +131,8 @@ text: "Who needs to be involved and what do they need to do?"
 
 
     {{ govukButton({
-      text: "Continue"
+      text: "Continue",
+      classes: "hods-button"
     }) }}
 
     <input type="hidden" id="sis-actions-done" name="sis-actions-done" value="Yes">
