--- a/app/views/housing/task/docs/document-list-updated.html
+++ b/app/views/housing/task/docs/document-list-updated.html
@@ -15,7 +15,7 @@ Document Upload - Internal Referral Form
 
   <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
-      <form class="document-list" action="" method="post">
+      <form class="document-list" action="/housing/task/list" method="post">
         <h1 class="govuk-heading-l">Check your answers</h1>
 
 
