--- a/app/views/housing/task/main/funds/abuse.html
+++ b/app/views/housing/task/main/funds/abuse.html
@@ -65,7 +65,8 @@ Home – {{serviceName}} – Has the person already entered the UK?
     {% from "govuk/components/button/macro.njk" import govukButton %}
 
 {{ govukButton({
-  text: "Continue"
+  text: "Continue",
+  classes: "hods-button"
 }) }}
 
 <input type="hidden" id="sis-funds-done" name="sis-funds-done" value="Yes">
