--- a/app/views/housing/task/main/housing/address.html
+++ b/app/views/housing/task/main/housing/address.html
@@ -70,7 +70,8 @@ Submit intelligence about immigration or borders – The address where the worki
 {% from "govuk/components/button/macro.njk" import govukButton %}
 
 {{ govukButton({
-  text: "Continue"
+  text: "Continue",
+  classes: "hods-button"
 }) }}
 
 <input type="hidden" id="sis-housing-address" name="sis-housing-address" value="Yes">
