--- a/app/views/housing/task/main/housing/details.html
+++ b/app/views/housing/task/main/housing/details.html
@@ -81,7 +81,8 @@ Home – {{serviceName}} – Illegal working dates
     {% from "govuk/components/button/macro.njk" import govukButton %}
 
 {{ govukButton({
-  text: "Continue"
+  text: "Continue",
+  classes: "hods-button"
 }) }}
 
 
