--- a/app/views/housing/task/person/address3.html
+++ b/app/views/housing/task/person/address3.html
@@ -281,7 +281,8 @@ Submit intelligence about immigration or borders – The person you are reportin
         <br/><br/>
 
         {{ govukButton({
-          text: "Continue"
+          text: "Continue",
+          classes: "hods-button"
         }) }}
 
 
