--- a/app/views/housing/task/person/contact2.html
+++ b/app/views/housing/task/person/contact2.html
@@ -76,7 +76,8 @@ text: "No"
       {% from "govuk/components/button/macro.njk" import govukButton %}
 
       {{ govukButton({
-        text: "Continue"
+        text: "Continue",
+        classes: "hods-button"
     }) }}
 
 
