--- a/app/views/housing/task/person/details3.html
+++ b/app/views/housing/task/person/details3.html
@@ -275,7 +275,8 @@ classes: "hods-button hods-button--secondary"
 {% from "govuk/components/button/macro.njk" import govukButton %}
 
 {{ govukButton({
-  text: "Continue"
+  text: "Continue",
+  classes: "hods-button"
 }) }}
 
       </form>
