--- a/app/views/housing/task/person/type.html
+++ b/app/views/housing/task/person/type.html
@@ -65,7 +65,8 @@ Submit intelligence about immigration or borders – What is the role of this pe
       </div>
 
     {{ govukButton({
-      text: "Continue"
+      text: "Continue",
+      classes: "hods-button"
     }) }}
 
     </form>
