--- a/app/views/housing/start/crime2.html
+++ b/app/views/housing/start/crime2.html
@@ -46,7 +46,8 @@ Submit intelligence about immigration or borders – What is the immigration off
         <!-- End of extension -->
 
     {{ govukButton({
-      text: "Continue"
+      text: "Continue",
+      classes: "hods-button"
     }) }}
 
     </form>
