--- a/app/views/housing/start/harm/details.html
+++ b/app/views/housing/start/harm/details.html
@@ -46,7 +46,8 @@ Submit intelligence about immigration or borders – Is there danger to life, or
     }) }}
 
     {{ govukButton({
-      text: "Continue"
+      text: "Continue",
+      classes: "hods-button"
     }) }}
 
 
