--- a/app/views/housing/start/harm/previous-alert.html
+++ b/app/views/housing/start/harm/previous-alert.html
@@ -32,7 +32,8 @@ Submit intelligence about immigration or borders – Have you already reported t
 
 
     {{ govukButton({
-      text: "Continue"
+      text: "Continue",
+      classes: "hods-button"
     }) }}
 
 
