--- a/app/views/housing/start/referral-reason.html
+++ b/app/views/housing/start/referral-reason.html
@@ -71,7 +71,8 @@ Submit intelligence about immigration or borders – Does this referral need to 
     }) }}
 
     {{ govukButton({
-      text: "Continue"
+      text: "Continue",
+      classes: "hods-button"
     }) }}
 
 
