--- a/app/views/housing/task/business/address.html
+++ b/app/views/housing/task/business/address.html
@@ -89,7 +89,8 @@ Submit intelligence about immigration or borders – Business address
 {% from "govuk/components/button/macro.njk" import govukButton %}
 
 {{ govukButton({
-  text: "Continue"
+  text: "Continue",
+  classes: "hods-button"
 }) }}
 
 <input type="hidden" id="sis-biz-info" name="sis-biz-info" value="yes">
