--- a/app/views/housing/task/business/business.html
+++ b/app/views/housing/task/business/business.html
@@ -272,7 +272,8 @@ Submit intelligence about immigration or borders - Business details
 {% from "govuk/components/button/macro.njk" import govukButton %}
 
 {{ govukButton({
-  text: "Continue"
+  text: "Continue",
+  classes: "hods-button"
 }) }}
 
       </form>
