--- a/app/views/housing/task/main/extra.html
+++ b/app/views/housing/task/main/extra.html
@@ -42,7 +42,8 @@ Submit intelligence about immigration or borders – Tell us about the offence
       {% from "govuk/components/button/macro.njk" import govukButton %}
 
       {{ govukButton({
-        text: "Continue"
+        text: "Continue",
+        classes: "hods-button"
       }) }}
 
       <input type="hidden" id="sis-extra-done" name="sis-extra-done" value="Yes">
