--- a/app/views/housing/task/person/address.html
+++ b/app/views/housing/task/person/address.html
@@ -489,7 +489,8 @@ Submit intelligence about immigration or borders – The address of the person y
         <br/><br/>
 
         {{ govukButton({
-          text: "Continue"
+          text: "Continue",
+          classes: "hods-button"
         }) }}
 
 
