--- a/app/views/housing/task/person/address2.html
+++ b/app/views/housing/task/person/address2.html
@@ -280,7 +280,8 @@ Submit intelligence about immigration or borders – The person you are reportin
         <br/><br/>
 
         {{ govukButton({
-          text: "Continue"
+          text: "Continue",
+          classes: "hods-button"
         }) }}
 
 
