--- a/app/views/housing/task/person/confirm.html
+++ b/app/views/housing/task/person/confirm.html
@@ -46,7 +46,8 @@ Submit intelligence about immigration or borders – Do you need to add a person
 {% from "govuk/components/button/macro.njk" import govukButton %}
 
 {{ govukButton({
-  text: "Continue"
+  text: "Continue",
+  classes: "hods-button"
 }) }}
 
       </form>
