--- a/app/views/housing/task/person/contact.html
+++ b/app/views/housing/task/person/contact.html
@@ -80,7 +80,8 @@ Submit intelligence about immigration or borders – Other details
       {% from "govuk/components/button/macro.njk" import govukButton %}
 
       {{ govukButton({
-        text: "Continue"
+        text: "Continue",
+        classes: "hods-button"
     }) }}
 
 
