--- a/app/views/housing/task/person/contact3.html
+++ b/app/views/housing/task/person/contact3.html
@@ -77,7 +77,8 @@ text: "No"
       {% from "govuk/components/button/macro.njk" import govukButton %}
 
       {{ govukButton({
-        text: "Continue"
+        text: "Continue",
+        classes: "hods-button"
     }) }}
 
 
