--- a/app/views/housing/task/person/interruption.html
+++ b/app/views/housing/task/person/interruption.html
@@ -31,7 +31,8 @@ Submit intelligence about immigration or borders – Change to an answer
 
       <div class="govuk-button-group">
         {{ govukButton({
-          text: "Continue"
+          text: "Continue",
+          classes: "hods-button"
         }) }}
 
         {{ govukButton({
