--- a/app/views/housing/task/person/type3.html
+++ b/app/views/housing/task/person/type3.html
@@ -67,7 +67,8 @@ Submit intelligence about immigration or borders – What is the role of this pe
       }) }}
 
     {{ govukButton({
-      text: "Continue"
+      text: "Continue",
+      classes: "hods-button"
     }) }}
 
     </form>
