updated interruption card

--- a/app/views/housing/task/person/interruption.html
+++ b/app/views/housing/task/person/interruption.html
@@ -19,7 +19,7 @@ Submit intelligence about immigration or borders – Change to an answer
       <h1 class="govuk-heading-l">Updating your answer will affect other sections of this referral</h1>
 
       <p>If you make this change to <strong>Person 1 ({{ data['sis-person1-first-name'] }} {{ data['sis-person1-surname'] }})</strong>, any information you have given in these sections will be deleted:
-        <ul class="govuk-list">
+        <ul class="govuk-list govuk-list--bullet">
           <li><strong>Abuse of access to housing details</strong></li>
         </ul>
 
