--- a/app/views/layouts/default-sis.html
+++ b/app/views/layouts/default-sis.html
@@ -80,7 +80,7 @@
           </svg>
         </div>
         <div class="hods-header__title">
-          <a aria-current="page" class="hods-header__link hods-header__link--service-name hods-header__link--active" href="{{ homeLink or 'home' }}">
+          <a aria-current="page" class="hods-header__link hods-header__link--service-name hods-header__link--active" href="{{ homeLink or '/index' }}">
             Submit immigration and national security intelligence
           </a>
         </div>
