--- a/app/views/housing/start/harm/previous.html
+++ b/app/views/housing/start/harm/previous.html
@@ -17,7 +17,7 @@ Submit intelligence about immigration or borders – Have you already reported t
 
    <!--<span class="govuk-caption-xl">Safeguarding</span>-->
 
-    <form class="form" action="/housing/harm-previous" method="post">
+    <form class="form" action="/housing/housing-harm-previous" method="post">
 
     {% from "govuk/components/input/macro.njk" import govukInput %}
       {% set harmReport %}
