--- a/app/views/housing/start/team.html
+++ b/app/views/housing/start/team.html
@@ -16,7 +16,7 @@ Submit intelligence about immigration or borders – Who did you receive this in
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-<form class="form" action="sis-team" method="post">
+<form class="form" action="housing-sis-team" method="post">
 
 {% set policeForce %}
 {{ govukInput({
@@ -55,7 +55,7 @@ Submit intelligence about immigration or borders – Who did you receive this in
 <div id="subject-hint" class="govuk-hint">
   Start typing to search
 </div>
-{% include "/current/templates/ref-data/sis-dept.html" %}
+{% include "/housing/templates/ref-data/sis-dept.html" %}
 {% endset -%}
 
 {% set otherOrg %}
