--- a/app/views/housing/task/main/funds/details.html
+++ b/app/views/housing/task/main/funds/details.html
@@ -21,7 +21,7 @@ Submit intelligence about immigration or borders – Tell us about the offence
       <legend class="govuk-fieldset__legend govuk-fieldset__legend--l">
      
       <h1 class="govuk-heading-l" style="margin-bottom:10px;">
-        Describe who has been abusing public or private funds and how.
+        Describe who has been abusing public or private funds and how
       </h1>
      
     <textarea class="govuk-textarea" name='sis-funds' value="data['sis-funds']" rows="5" aria-describedby="more-detail-hint"></textarea>
