--- a/app/views/index.html
+++ b/app/views/index.html
@@ -5,8 +5,8 @@
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-
-    <h2 class="govuk-heading-l">Submit immigration and national security intelligence (SIS Form)</h2>
+    <h2 class="govuk-heading-l">Internal Allegation and Referral Forms</h2>
+    <!-- <h2 class="govuk-heading-l">Submit immigration and national security intelligence (SIS Form)</h2> -->
     
     <section class="sprint-section">
       <span class="govuk-caption-m">August 2025</span>
