--- a/app/views/housing/start/sub-crime.html
+++ b/app/views/housing/start/sub-crime.html
@@ -17,7 +17,7 @@ Submit intelligence about immigration or borders – Is there danger to life, or
 
    <!--<span class="govuk-caption-xl">Safeguarding</span>-->
 
-    <form class="form" action="/housing/sub-offence" method="post">
+    <form class="form" action="/housing/housing-sub-offence" method="post">
 
 {% from "govuk/components/checkboxes/macro.njk" import govukCheckboxes %}
 
