update index page

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -5,13 +5,23 @@
 {% block content %}
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <h2 class="govuk-heading-l">Internal Allegation and Referral Forms</h2>
-    <!-- <h2 class="govuk-heading-l">Submit immigration and national security intelligence (SIS Form)</h2> -->
+    <h2 class="govuk-heading-l">Internal Allegation and Referral Forms<br>
+    <span class="govuk-caption-m">Previously known as "Submit immigration and national security intelligence (SIS Form)" </span></h2>
+
+    <section class="sprint-section">
+      <span class="govuk-caption-m">August 2025</span>
+      <h3 class="govuk-heading-m">Smuggling journey</h3>
+      <p>New user journey based on IMS smuggling form, using current SIS components</p>
+      <ul class="govuk-list govuk-list--bullet">
+        <li><a href="purple/current/start/intro">View journey</a></li>
+      </ul>
+    </section>
+    <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
     
     <section class="sprint-section">
       <span class="govuk-caption-m">August 2025</span>
-      <h3 class="govuk-heading-m">New user journey for Abuse of access to housing journey</h3>
-      <p>Also includes new service start, new document upload pattern, and new interstitial page for deleting/changing a section</p>
+      <h3 class="govuk-heading-m">New user journey for Abuse of access to housing journey
+      <p>Also includes new service start, new document upload pattern, and new interstitial page for deleting/changing a section<</h3>
       <ul class="govuk-list govuk-list--bullet">
         <li><a href="housing/start/intro">Service start</a></li>
       </ul>
@@ -20,20 +30,10 @@
 
     <section class="sprint-section">
       <span class="govuk-caption-m">July 2025</span>
-      <h3 class="govuk-heading-m">Smuggling journey</h3>
-      <p>New user journey based on IMS smuggling form, using current SIS components</p>
-      <ul class="govuk-list govuk-list--bullet">
-        <li><a href="purple/current/start/intro">Start page</a></li>
-      </ul>
-    </section>
-    <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
-
-    <section class="sprint-section">
-      <span class="govuk-caption-m">July 2025</span>
-      <h3 class="govuk-heading-m">Start page</h3>
+      <h3 class="govuk-heading-m">Updated Start page</h3>
       <p>Updating the start page to better inform users of what they need before they start, and of the 30 minute time llimit.</p>
       <ul class="govuk-list govuk-list--bullet">
-        <li><a href="service-start">Service start</a></li>
+        <li><a href="service-start">View start page</a></li>
       </ul>
     </section>
     <hr class="govuk-section-break govuk-section-break--l govuk-section-break--visible">
