--- a/app/views/purple/current/task/list.html
+++ b/app/views/purple/current/task/list.html
@@ -362,7 +362,7 @@
 
 
 <li class="app-task-list__item">
-   {% if data["sis-smuggling-vehicles-done"] == "Yes" %}
+   {% if data["sis-vehicles-done"] == "Yes" %}
                
     
                 <span class="app-task-list__task-name">
