--- a/app/views/purple/current/task/main/smuggling/vehicles/list.html
+++ b/app/views/purple/current/task/main/smuggling/vehicles/list.html
@@ -246,7 +246,7 @@ Date of departure
 
 
 
-  <input type="hidden" id="sis-cland-done" name="sis-vehicles-done" value="Yes">
+  <input type="hidden" id="sis-vehicles-done" name="sis-vehicles-done" value="Yes">
 
 {% from "govuk/components/button/macro.njk" import govukButton %}
 {{ govukButton({
