--- a/app/views/purple/current/task/person/list.html
+++ b/app/views/purple/current/task/person/list.html
@@ -177,7 +177,7 @@ Submit intelligence about immigration or borders – Person details
     <!--END-->
 
      <!--SHAM MARRIAGE, ILLEGAL WORKING, OVERSTAYER CARDS, HOUSING-->
-        {% if data["start-crime"] == "facilitation" or data["start-crime"] == "other" or data["start-crime"] == "marriage" or data["start-crime"] == "illegal-working" or data["start-crime"] == "conditions" or data["start-crime"] == "clandestine" or data["start-crime"] == "overstayer" or data["start-crime"] == "deception" or data["start-crime"] == "housing" or data["start-crime"] == "rep-abuse" or data["start-crime"] == "s24" or data ["start-crime"] == "terrorism"%}
+        {% if data["start-crime"] == "facilitation" or data["start-crime"] == "other" or data["start-crime"] == "marriage" or data["start-crime"] == "illegal-working" or data["start-crime"] == "conditions" or data["start-crime"] == "clandestine" or data["start-crime"] == "overstayer" or data["start-crime"] == "deception" or data["start-crime"] == "housing" or data["start-crime"] == "rep-abuse" or data["start-crime"] == "s24" or data ["start-crime"] == "terrorism" or data ["start-crime"] == "smuggling" %}
 
         {% include "purple/current/templates/summary/sis-person1.html" %}
 
