--- a/app/views/purple/current/task/person/details2.html
+++ b/app/views/purple/current/task/person/details2.html
@@ -34,7 +34,7 @@ Submit intelligence about immigration or borders – The person you are reportin
       <p class="govuk-body">Complete as much about the person as you can.</p>
 {% else %}
 {% endif %}
-{% if data["start-crime"] == "conditions" or data["start-crime"] == "other" or data["start-crime"] == "illegal-working" or data["start-crime"] == "marriage" or data["start-crime"] == "conditions" or data["start-crime"] == "clandestine" or data["start-crime"] == "overstayer" or data["start-crime"] == "housing" or data["start-crime"] == "rep-abuse" or data["start-crime"] == "deception" or data["start-crime"] == "facilitation" or data["start-crime"] == "slavery" or data["start-crime"] == "terrorism" %}
+{% if data["start-crime"] == "conditions" or data["start-crime"] == "other" or data["start-crime"] == "illegal-working" or data["start-crime"] == "marriage" or data["start-crime"] == "conditions" or data["start-crime"] == "clandestine" or data["start-crime"] == "overstayer" or data["start-crime"] == "housing" or data["start-crime"] == "rep-abuse" or data["start-crime"] == "deception" or data["start-crime"] == "facilitation" or data["start-crime"] == "slavery" or data["start-crime"] == "terrorism"  or data["start-crime"] == "smuggling" %}
       <h1 class="govuk-heading-l">Person 2: Details</h1>
       <p class="govuk-body">Complete as much about the person as you can.</p>
 {% else %}
