--- a/app/views/layouts/landing.html
+++ b/app/views/layouts/landing.html
@@ -12,7 +12,7 @@ https://prototype-kit.service.gov.uk/docs/how-to-use-layouts
       <h1 class="govuk-heading-xl app-masthead__title">Purple Team's prototype</h1>
       <p class="app-masthead__description"> This area is for designers in the Purple Team to experiment and test with users in a safe environment.</p>
 
-      <a href="current/start/intro" role="button" draggable="false" class="govuk-button govuk-button--inverse govuk-!-margin-top-6 govuk-!-margin-bottom-0 govuk-button--start" data-module="govuk-button" data-govuk-button-init="" style="color:#1d70b8;">
+      <a href="purple/current/start/intro" role="button" draggable="false" class="govuk-button govuk-button--inverse govuk-!-margin-top-6 govuk-!-margin-bottom-0 govuk-button--start" data-module="govuk-button" data-govuk-button-init="" style="color:#1d70b8;">
       Get started
       <svg class="govuk-button__start-icon" xmlns="http://www.w3.org/2000/svg" width="17.5" height="19" viewBox="0 0 33 40" aria-hidden="true" focusable="false">
         <path fill="currentColor" d="M0 0h13l20 20-20 20H0l20-20z"></path>
