--- a/app/views/purple/current/task/person/contact2.html
+++ b/app/views/purple/current/task/person/contact2.html
@@ -79,64 +79,6 @@ text: "No"
         
    {% else %}{% endif %}
 
-      {% if data["start-crime"] == "smuggling" %}
-      <h1 class="govuk-heading-l">Person 2: Address</h1>
-      <form class="form" action="/purple/current/sis-person2-address-smuggling" method="post">
-        {% from "govuk/components/radios/macro.njk" import govukRadios %}
-        {% from "govuk/components/fieldset/macro.njk" import govukFieldset %}
-
-        {% set personAddress %}
-{{ govukRadios({
-name: "sis-person1-address-uk",
-value: data["sis-person1-address-uk"],
-classes: "govuk-radios--inline",
-fieldset: {
-legend: {
-text: "Is the address in the UK?"
-}
-},
-items: [
-{
-value: "Yes",
-text: "Yes"
-},
-{
-value: "No",
-text: "No"
-}
-]
-}) }}
-{% endset -%}
-
-  {{ govukRadios({
-    name: "sis-person1-address-known",
-    value: data["sis-person1-address-known"],
-    fieldset: {
-    legend: {
-    text: "Do you know their address?",
-    classes: "govuk-fieldset__legend--m"
-    }
-    },
-    hint: {
-    text: "This could be any type of address, including home or work address."
-  },
-    items: [
-    {
-    value: "Yes",
-    text: "Yes",
-    conditional: {
-      html: personAddress
-    }
-    },
-    {
-    value: "No",
-    text: "No"
-    }
-    ]
-    }) }}
-        
-   {% else %}{% endif %}
-
       <!--DOC FRAUD START SECTION-->
       {% if data["start-crime"] == "document-fraud" %}
       {% if data["sis-docs-real"] == "Yes" %}
@@ -319,7 +261,7 @@ text: "No"
 
   {% else %}  {% endif %}
 
-  {% if data["start-crime"] == "facilitation" or data["start-crime"] == "other" or data["start-crime"] == "illegal-working" or data["start-crime"] == "rep-abuse" or data["start-crime"] == "conditions" or data["start-crime"] == "slavery" or data["start-crime"] == "marriage" or data["start-crime"] == "clandestine" or data["start-crime"] == "overstayer" or data["start-crime"] == "deception" or data["start-crime"] == "housing"%}
+  {% if data["start-crime"] == "facilitation" or data["start-crime"] == "other" or data["start-crime"] == "illegal-working" or data["start-crime"] == "rep-abuse" or data["start-crime"] == "conditions" or data["start-crime"] == "slavery" or data["start-crime"] == "marriage" or data["start-crime"] == "clandestine" or data["start-crime"] == "overstayer" or data["start-crime"] == "deception" or data["start-crime"] == "housing" or data["start-crime"] == "smuggling"%}
       <h1 class="govuk-heading-l">Person 2: Address</h1>
       <form class="form" action="/purple/current/sis-person2-address" method="post">
         {% from "govuk/components/radios/macro.njk" import govukRadios %}
